# kr_7_drf

./: .coverage  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
main/: models.py  pagination.py  post_habit.py  serializers.py  tasks.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_is_public_alter_habit_nice_habit.py
user/: models.py  serializers.py  urls.py  views.py
user/management/commands/: csu.py  habit_list.json  import_habits.py  post_habit.py
user/migrations/: 0001_initial.py
