[tool.poetry]
name = "kr_7_drf"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galiulin <yaroslav66@list.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
celery = "^5.2.1"
django-cors-headers = "^4.3.0"
redis = "^5.0.1"
django-celery-beat = "^2.5.0"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
psycopg = "^3.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
